--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,12 +30,12 @@ jobs:
     - name: Build with Maven
       run: mvn clean install
 
-    uses: mr-smithers-excellent/docker-build-push@v6
-    name: Build & push Docker image
-    with:
-      image: harikanure007/springboot-swagger
-      tags: v1, latest
-      registry: docker.io
-      dockerfile: Dockerfile
-      username: ${{ secrets.DOCKER_USERNAME }}
-      password: ${{ secrets.DOCKER_PASSWORD }}  
+    - uses: mr-smithers-excellent/docker-build-push@v6
+    - name: Build & push Docker image
+      with:
+        image: harikanure007/springboot-swagger
+        tags: latest
+        registry: docker.io
+        dockerfile: Dockerfile
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}  
