--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,9 +29,8 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn clean install
-
-    - uses: mr-smithers-excellent/docker-build-push@v6
     - name: Build & push Docker image
+      uses: mr-smithers-excellent/docker-build-push@v6
       with:
         image: harikanure007/springboot-swagger
         tags: latest
