--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,6 +29,9 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn clean install
+    - uses: reviewdog/action-setup@v1
+      with:
+        reviewdog_version: latest   
     - name: Build & push Docker image
       uses: mr-smithers-excellent/docker-build-push@v6
       with:
